--- a/deal.html
+++ b/deal.html
@@ -63,13 +63,13 @@ search_string: 'leather sandals'
 						</tr>
 						<tr>
 							<td>
-								Hours
+								<span class="count_label">Hours</span>
 							</td>
 							<td>
-								Minutes
+								<span class="count_label">Minutes</span>
 							</td>
 							<td>
-								Seconds
+								<span class="count_label">Seconds</span>
 							</td>
 						</tr>
 					</table>
@@ -80,17 +80,18 @@ search_string: 'leather sandals'
 </tr>
 <tr id="webpage_bottom">
 <td colspan="2">
+<br/>
 Train Harder and Longer
 
 Combined with a healthy diet and regular workout, this potent creatine supplement promises remarkable fitness benefits:
 
-<ul>Massive muscle growth</ul>
-<ul>High intensity Energy and Focus</ul>
-<ul>Top endurance</ul>
-<ul>Enhanced muscle pumps</ul>
-<ul>Explosive speed</ul>
-<ul>Increased overall athletic performance</ul>
-<ul>Lab-Tested, High Performance Formula That You Can Trust</ul>
+	<ul>Massive muscle growth</ul>
+	<ul>High intensity Energy and Focus</ul>
+	<ul>Top endurance</ul>
+	<ul>Enhanced muscle pumps</ul>
+	<ul>Explosive speed</ul>
+	<ul>Increased overall athletic performance</ul>
+	<ul>Lab-Tested, High Performance Formula That You Can Trust</ul>
 <br/>
 	<ul>• SKYROCKET SIZE & STRENGTH: Are you looking for an effective, pure creatine supplement that will support your muscular endurance and help you push out more reps at the gym? Perfect for pre/post- bodybuilding workout or strength training, this advanced creatine powder formula will fuel your muscles during high-intensity exercise and help you reach your fitness goals faster than ever before!</ul>
 	<ul>• INCREASE SPEED FOR EXPLOSIVE WORKOUTS: Micronized creatine monohydrate is essential in the process of sending energy directly to muscles and has been shown to help increase overall muscle mass and boost strength and speed, making it extremely helpful for explosive sports like boxing, bodybuilding or powerlifting.</ul>
