New Youtube link

--- a/deal.html
+++ b/deal.html
@@ -31,13 +31,14 @@ search_string: 'leather sandals'
 <table id="webpage_table">
 <tr id="webpage_top">
 	<td id="webpage_header" colspan="2">
-		<h1>Creatine Monohydrate Powder</h1>
-		<h3>Only $10 to DOUBLE your muscle gain!</h3>
+		<span id="webpage_title">Creatine Monohydrate Powder</span>
+		<br/>
+		<span id="webpage_subtitle">Only $10 to DOUBLE your muscle gain!</span>
 	</td>
 </tr>
 <tr id="webpage_middle">
 	<td id="webpage_video">
-		<iframe width="100%" height="100%" src="http://www.youtube.com/embed/ddgBDjgxlXI?autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>​
+		<iframe width="100%" height="100%" src="http://www.youtube.com/embed/V13R5lu9VNc?autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>​
 		</td>
 	<td id="webpage_content">
 		<table>
@@ -84,20 +85,19 @@ search_string: 'leather sandals'
 Train Harder and Longer
 
 Combined with a healthy diet and regular workout, this potent creatine supplement promises remarkable fitness benefits:
-
-	<ul>Massive muscle growth</ul>
-	<ul>High intensity Energy and Focus</ul>
-	<ul>Top endurance</ul>
-	<ul>Enhanced muscle pumps</ul>
-	<ul>Explosive speed</ul>
-	<ul>Increased overall athletic performance</ul>
-	<ul>Lab-Tested, High Performance Formula That You Can Trust</ul>
+	<ul class="bold">Massive muscle growth</ul>
+	<ul class="bold">High intensity Energy and Focus</ul>
+	<ul class="bold">Top endurance</ul>
+	<ul class="bold">Enhanced muscle pumps</ul>
+	<ul class="bold">Explosive speed</ul>
+	<ul class="bold">Increased overall athletic performance</ul>
+	<ul class="bold">Lab-Tested, High Performance Formula That You Can Trust</ul>
 <br/>
-	<ul>• SKYROCKET SIZE & STRENGTH: Are you looking for an effective, pure creatine supplement that will support your muscular endurance and help you push out more reps at the gym? Perfect for pre/post- bodybuilding workout or strength training, this advanced creatine powder formula will fuel your muscles during high-intensity exercise and help you reach your fitness goals faster than ever before!</ul>
-	<ul>• INCREASE SPEED FOR EXPLOSIVE WORKOUTS: Micronized creatine monohydrate is essential in the process of sending energy directly to muscles and has been shown to help increase overall muscle mass and boost strength and speed, making it extremely helpful for explosive sports like boxing, bodybuilding or powerlifting.</ul>
-	<ul>• BEST VALUE FOR MONEY: If you’re looking for the best micronized creatine monohydrate powder supplement that combines a high performance formula with a jaw-dropping price, then look no further. Unlike most other creatine powder supplements on the market, this micronized creatine monohydrate formula offers massive muscle gains without breaking the bank.</ul>
-	<ul>• LAB-TESTED QUALITY: Stop wasting tons of money on unreliable, ineffective products that just don’t work. Trust in this lab-tested, verified and 99.99% purity guaranteed micronized creatine monohydrate powder that delivers on its promises.</ul>
-	<ul>• VEGAN FRIENDLY: Are you on a vegan diet? BulkSupplements pure micronized creatine monohydrate bodybuilding/crossfit supplement contains no dairy or dangerous/unecessary additives and is sugar, soy, yeast and gluten-free, so you can use it with peace of mind.</ul>
+	<ul>• <span class="bold">SKYROCKET SIZE & STRENGTH</span>: Are you looking for an effective, pure creatine supplement that will support your muscular endurance and help you push out more reps at the gym? Perfect for pre/post- bodybuilding workout or strength training, this advanced creatine powder formula will fuel your muscles during high-intensity exercise and help you reach your fitness goals faster than ever before!</ul>
+	<ul>• <span class="bold">INCREASE SPEED FOR EXPLOSIVE WORKOUTS</span>: Micronized creatine monohydrate is essential in the process of sending energy directly to muscles and has been shown to help increase overall muscle mass and boost strength and speed, making it extremely helpful for explosive sports like boxing, bodybuilding or powerlifting.</ul>
+	<ul>• <span class="bold">BEST VALUE FOR MONEY</span>: If you’re looking for the best micronized creatine monohydrate powder supplement that combines a high performance formula with a jaw-dropping price, then look no further. Unlike most other creatine powder supplements on the market, this micronized creatine monohydrate formula offers massive muscle gains without breaking the bank.</ul>
+	<ul>• <span class="bold">LAB-TESTED QUALITY</span>: Stop wasting tons of money on unreliable, ineffective products that just don’t work. Trust in this lab-tested, verified and 99.99% purity guaranteed micronized creatine monohydrate powder that delivers on its promises.</ul>
+	<ul>• <span class="bold">VEGAN FRIENDLY</span>: Are you on a vegan diet? BulkSupplements pure micronized creatine monohydrate bodybuilding/crossfit supplement contains no dairy or dangerous/unecessary additives and is sugar, soy, yeast and gluten-free, so you can use it with peace of mind.</ul>
 </td>	
 </tr>
 </table>
