Change pixel action

--- a/deal.html
+++ b/deal.html
@@ -16,6 +16,12 @@ src="https://www.facebook.com/tr?id=631336860389102&ev=PageView&noscript=1"
 /></noscript>
 <!-- DO NOT MODIFY -->
 <!-- End Facebook Pixel Code -->
+<script>
+fbq('track', 'ViewContent', {
+value: 9.46,
+currency: 'USD'
+});
+</script>
 <script src="js/jquery.js"></script>
 <script src="js/script.js"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -27,7 +33,7 @@ src="https://www.facebook.com/tr?id=631336860389102&ev=PageView&noscript=1"
 	<td id="webpage_header" colspan="2">
 		<span id="webpage_title">Creatine Monohydrate Powder</span>
 		<br/>
-		<span id="webpage_subtitle">Only $10 to DOUBLE your muscle gain!</span>
+		<span id="webpage_subtitle">Only $9 to DOUBLE your muscle gain!</span>
 	</td>
 </tr>
 <tr id="webpage_middle">
