--- a/Jooblee/jooblee.html
+++ b/Jooblee/jooblee.html
@@ -4,11 +4,11 @@
 <script src="js/jquery.js"></script>
 <script src="js/script.js"></script>
 </head>
-<header><title>World Harvest Produce</title></header>
+<header><title>Jooblee</title></header>
 <body>
 <table id="full-screen" cellpadding="0" cellspacing="0">
 	<tr id="header-area">
-		<td>Lines</td>
+		<td><button id="lines"><img src="images/lines.png"></button></td>
 		<td colspan="3">Jooblee</td>
 	</tr>
 	<tr id="tabs-area" cellpadding="0" cellspacing="0">
@@ -26,8 +26,8 @@
 		<td colspan="4">Map</td>
 	</tr>
 	<tr id="icons-area">
-		<td><button id="map-icon">Map Icon</button></td>
-		<td><button id="lines-icon">Lines Icon</button></td>
+		<td><button id="map-icon"><img src="images/map-icon.png"></button></td>
+		<td><button id="lines-icon"><img src="images/lines-icon.png"></button></td>
 	</tr>
 	<tr id="dropdown-area">
 		<td colspan="4">
