--- a/Jooblee/jooblee.html
+++ b/Jooblee/jooblee.html
@@ -13,11 +13,11 @@
 	</tr>
 	<tr id="tabs-area" cellpadding="0" cellspacing="0">
 		<td colspan="4">
-			<table id="top-tabs">
+			<table id="top-tabs" cellpadding="0" cellspacing="0">
 				<tr>
 					<td>Dashboard</td>
 					<td>Live feed</td>
-					<td>Map</td>
+					<td class="selected-tab">Map</td>
 				</tr>
 			</table>
 		</td>
